--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ a {
 }
 
 .effective-btn {
-    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.9;
     align-items: center;
